1.8.1 -> 1.8.1.5

- Replaced default import of all elgg annotations with a plugin settings option to import generic comments and forum topic posts
- Added option to enable/disable hypeAlive comments/likes for river, entities and forum
- Added option to disable notifications
- Edited notification language strings
- Added option to reset the settings
- Changed how likes strings are parsed

1.8.1.5 -> 1.8.2
- Fixed UTF-8 encoding problem
- Fixed filter problem

1.8.2 -> 1.8.5
- Replaced on-scroll loading of river items with a Load more button
- Added comments to the search
- Fixed notifications

1.8.5 -> 1.8.6
- UI improvements
- Different list handling
- +1s
